--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "OpenShift-Sample-App",
+  "name": "project2",
   "version": "1.0.0",
-  "description": "OpenShift Sample Application",
   "keywords": [
     "OpenShift",
     "Node.js",
@@ -25,11 +24,21 @@
   },
 
   "dependencies": {
-    "express": "~3.4.4"
+    "express": "~4.9.0",
+    "body-parser": "~1.8.1",
+    "cookie-parser": "~1.3.3",
+    "morgan": "~1.3.0",
+    "serve-favicon": "~2.1.3",
+    "debug": "~2.0.0",
+    "jade": "~1.6.0",
+    "stylus": "0.42.3",
+    "mongodb": "*",
+    "monk": "*",
+    "connect": "*"
   },
   "devDependencies": {},
   "bundleDependencies": [],
 
   "private": true,
-  "main": "server.js"
+  "main": "app.js"
 }
