--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
   },
-
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
     "express": "~4.9.0",
     "body-parser": "~1.8.1",
